force-app/main/default/objects/Lote__c/fields/Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Bloqueo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Este campo se utiliza en regla de validación para bloquear registro para bloquear registro y podes codificarlo desde el boton &quot;Reabrir orden&quot;</description>
    <label>Bloqueo</label>
    <type>Checkbox</type>
</CustomField>