force-app/main/default/objects/Lote__c/fields/Casa__c.field-meta.xml
<CustomField>
    <fullName>Casa__c</fullName>
    <label>Casa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buenos Aires</fullName>
                <default>true</default>
                <label>Buenos Aires</label>
            </value>
            <value>
                <fullName>Rosario</fullName>
            </value>
            <value>
                <fullName>Ambas casas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>