force-app/main/default/objects/Lote__c/fields/Emision__c.field-meta.xml
<CustomField>
    <fullName>Emision__c</fullName>
    <label>Emisión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Diaria</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Semanal</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mensual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>