force-app/main/default/objects/Lote__c/fields/Errores_reintegros__c.field-meta.xml
<CustomField>
    <fullName>Errores_reintegros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Errores reintegros</label>
    <type>Checkbox</type>
</CustomField>