force-app/main/default/objects/Lote__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Contabilizado</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Finalizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>