force-app/main/default/objects/Lote__c/fields/Fallo_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Fallo_en_SS__c</fullName>
    <label>Fallo en SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>