force-app/main/default/objects/Lote__c/fields/Flag_Deshace_Orden__c.field-meta.xml
<CustomField>
    <fullName>Flag_Deshace_Orden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo usado para habilitar bonton de Deshace Orden</description>
    <label>Flag Deshace Orden</label>
    <type>Checkbox</type>
</CustomField>