force-app/main/default/objects/Lote__c/fields/Id_lote_SS__c.field-meta.xml
<CustomField>
    <fullName>Id_lote_SS__c</fullName>
    <externalId>true</externalId>
    <label>Id lote SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>