force-app/main/default/objects/Lote__c/fields/Orden_generada__c.field-meta.xml
<CustomField>
    <fullName>Orden_generada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para habilitar boton orden de pago</description>
    <label>Orden generada</label>
    <type>Checkbox</type>
</CustomField>