force-app/main/default/objects/Lote__c/fields/Reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Reasignacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reasignacion</label>
    <type>Checkbox</type>
</CustomField>