force-app/main/default/objects/Lote__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Especial</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Devoluciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>