force-app/main/default/objects/Lote__c/fields/Visibilidad_Front__c.field-meta.xml
<CustomField>
    <fullName>Visibilidad_Front__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibilidad Front</label>
    <type>Checkbox</type>
</CustomField>