force-app/main/default/objects/Lote__c/recordTypes/Lote.recordType-meta.xml
<RecordType>
    <fullName>Lote</fullName>
    <active>true</active>
    <label>Lote</label>
</RecordType>