force-app/main/default/objects/Lote__c/validationRules/Bloquear_registro.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_registro</fullName>
    <active>true</active>
    <description>Validacion cuando el estado del lote este en &quot;Cerrado&quot; quede bloqueado para modificaciones</description>
    <errorConditionFormula>AND(
				ISPICKVAL(PRIORVALUE(Estado__c),&quot;C&quot;), 
				Bloqueo__c, 
			 NOT(ISNEW()  
								)
				)</errorConditionFormula>
    <errorMessage>No se puede modificar si el estado del Lote es &quot;Cerrado&quot;</errorMessage>
</ValidationRule>