force-app/main/default/objects/Lote__c/listViews/Lotes_Front.listView-meta.xml
<ListView>
    <fullName>Lotes_Front</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Tipo__c</columns>
    <columns>Visibilidad_Front__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visibilidad_Front__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lotes Front</label>
</ListView>