force-app/main/default/objects/Lote__c/listViews/Lotes_vigentes.listView-meta.xml
<ListView>
    <fullName>Lotes_vigentes</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo__c</columns>
    <columns>Id_lote_SS__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los lotes</label>
</ListView>